# EPACT

./: .gitignore  EPACT.ipynb  README.md  predict_tcr_pmhc_binding.py  pretrain_pmhc_model.py  pyproject.toml  requirements.txt  train_tcr_pmhc_binding.py  train_tcr_pmhc_interact.py
EPACT/dataset/: __init__.py  batch_converter.py  data.py
EPACT/model/: __init__.py  coembedding.py  module.py  pretrained.py  utils.py
EPACT/trainer/: __init__.py  base.py  binding_trainer.py  interact_trainer.py  plm_trainer.py
EPACT/utils/: __init__.py  encoding.py  misc.py  sampling.py  tokenizer.py
configs/: config-paired-cdr123-pmhc-binding.yml  config-paired-cdr123-pmhc-interact.yml  config-paired-cdr3-pmhc-binding.yml  config-pmhc-binding.yml  config-pmhc-elution.yml  config-pretrain-cdr123-lm.yml  config-pretrain-cdr3-lm.yml  config-pretrain-epitope-lm.yml
sample/: TCR-cross-reactivity-MEL8.csv  VDJdb-GLCTLVAML.csv
scripts/: predict.sh  predict_interaction.sh  rank.sh  train.sh
scripts/predict/: predict_pmhc_presentation.py  predict_tcr_pmhc_binding_rank.py  predict_tcr_pmhc_interact.py
scripts/pretrain/: pretrain_plm.py
