[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epact"
version = "0.1.1"
authors = [
  { name="Yumeng Zhang", email="zhangyumeng1@sjtu.edu.cn" },
]
description = "Epitope-anchored contrastive transfer learning for paired CD8+ T Cell receptor-antigen Rrcognition"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch~=2.0",
    "biopython==1.81",
    "easydict==1.11",
    "PyYAML==6.0",
    "numpy~=1.25",
    "pandas~=2.0",
    "scikit-learn~=1.3",
    "scipy~=1.11",
    "tensorboard~=2.13",
    "tqdm~=4.65",
    "warmup-scheduler==0.3",
]

[project.urls]
Homepage = "https://github.com/zhangyumeng1sjtu/EPACT"
Issues = "https://github.com/zhangyumeng1sjtu/EPACT/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["EPACT", "EPACT.*"]
exclude = []  
namespaces = false 
